# Stonktastic

./: .gitignore  LICENSE  README.md  pylintDoc.txt  setup.cfg
docs/: genindex.html  index.html  main.html  objects.inv  py-modindex.html  search.html  searchindex.js  stonktastic.config.html  stonktastic.databaseCode.html  stonktastic.flask.html  stonktastic.html  stonktastic.machinelearning.html  stonktastic.optimization.html
docs/_sources/: stonktastic.config.rst.txt  stonktastic.databaseCode.rst.txt  stonktastic.optimization.rst.txt
docs/source/: conf.py  stonktastic.flask.rst  stonktastic.machinelearning.rst  stonktastic.rst
flask/: requirements.txt  run.py
flask/app/: __init__.py  database.db  views.py
models/ltsmModels/: AMCRScaler.save  AMCRmem.json  AMCRweight.h5  AMDScaler.save  AMDmem.json  AMDweight.h5  AXPScaler.save  AXPmem.json  AXPweight.h5  CLScaler.save  CLmem.json  CLweight.h5  HCAScaler.save  HCAmem.json  HCAweight.h5  KMBScaler.save  KMBmem.json  KMBweight.h5  KMXScaler.save  KMXmem.json  MCDmem.json  (+51 more)
notebooks/: Documentation_Data_Source.ipynb  Documentation_Database_Structure.ipynb  Documentation_Development_Practices.ipynb  Documentation_Flask.ipynb  Documentation_Installation.ipynb  Documentation_Memory.ipynb  Documentation_Polynomial_Regression.ipynb  Documentation_Python_Libraries_Used.ipynb  Documentation_Random_Forest.ipynb  Documentation_Stock_Technical_Indicators.ipynb  Documentation_Structural_and_Formatting_Guide.ipynb  Documentation__Python_Libraries_Used.ipynb  Untitled.ipynb  Untitled1.ipynb
sphnix/: readme.md
src/: main.py
(+122 files in other folders)
