[metadata]
name = stonktastic
version = <version number: 1.0.0>
license = <license name, e.g. MIT>
description = <A short description>
long_description = file: README.rst
author = Alexander Hahn, Kody Richardson, Dalen Healy
author_email = <Optional: author e-mail>
classifiers=

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =


[options.packages.find]
where=src
