[metadata]
name = stonktastic
version = <version number: 1.0.1>
license = <license name, e.g. MIT>
description = Stonktastic and Stock Prediction
long_description = file: README.rst
author = Alexander Hahn, Kody Richardson, Dalen Healy
author_email =
classifiers=

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =


[options.packages.find]
where=src
